<resources>
    <string name="app_name">TastyTravel</string>
    <string name="continue_to_main">Continue Without An Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_prompt">Don\'t have an Account? SIGN UP</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
...
    <string name="mainbackground">mainbackground</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoiam9obmRvd2F0ZXIiLCJhIjoiY2szcWNjdHIyMDA3cDNlcGlseWt3cjRiNiJ9.Bu2jIzXSGZNcxQBtGCrwbQ</string>
    <string name="saved_places">Saved Places</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="food_collage">Food collage</string>
    <string name="profile">Profile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string-array name="spinner_items">
        <item>Bar</item>
        <item>Cafe</item>
...
    <string name="create_a_password">Create a Password</string>
    <string name="password_must_be_at_6_least_6_characters_long">Password must be at least 6 characters long</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="please_fill_in_the_details_below_to_create_an_account">Please Fill in the Details Below to Create an Account</string>
    <string name="log_in_now">Sign In Now</string>
    <string name="please_login_to_continue_using_the_app">Please Login to Continue Using the App</string>
    <string name="logout">Logout</string>
    <string name="how_to_use">How To Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_Paragraph"> If you have any questions feel free to send us an email or check out our
        gitlab repository for user manuals and more information.\n
        \n
        Gerard: gerard.slowey2@mail.dcu.ie\n
...
